php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27742 WDSL SOAP Parsing Schema bug
Submitted: 2004-03-28 23:26 UTC Modified: 2004-04-02 01:15 UTC
From: david at cubbieco dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2004-03-28 (dev) OS: linux 2.6.3 kernel
Private report: No CVE-ID: None
 [2004-03-28 23:26 UTC] david at cubbieco dot com
Description:
------------
I'm new to soap.  I've been over all the tutorials I could find.  I have successfully used the PHP soap under those tutorials.  There is a WDSL provided by labs.zap2it.com (free login required for any useful information.  Use certificate code JYXN-ZAZN-YBUT if you check it out.)  I've tried to debug the WDSL script.  Because perl, Pear Soap, and Nusoap can all process this WDSL file I can only conclude that it's a PHP bug.

The WDSL is designed to connect to a soap server and be able to download an XML file of television listings.  The server requires authentication.  The perl script (linked in the reproduce code section) successfully authenticates and downloads the file.

I looked through the WDSL and the referenced WDSL for the <annotation> tag by itself, but it was always a legitemate (as far as I know) <xsd:annotation> tag set. 

Pear Soap does not have the authentication required and I can't get nuSoap to display the output properly.  I don't understand perl and I don't want to use it so I would really like a PHP only solution to access the US television listings soap server. 

I'm using the latest CVS.  Configure options:  
 	 './configure' '--with-mysql=/usr/local/mysql' '--with-apxs2=/usr/local/apache2/bin/apxs' '--with-imap=/home/david/imap-2000c' '--with-jpeg-dir=/usr/lib' '--with-png-dir=/usr/lib' '--with-zlib-dir=/usr/local/lib' '--with-freetype-dir=/usr/local/include/freetype2' '--enable-ftp' '--with-mcrypt=/usr/local/lib' '--with-gd' '--with-pspell' '--with-bz2=/usr/lib' '--enable-sockets' '--with-curl' '--enable-soap' '--enable-debug'

also tried:
 	 './configure' '--with-apxs2=/usr/local/apache2/bin/apxs' '--enable-soap'
with the same result.

I've tried this on two different linux machines, both with the 2.6.3 kernel.

Error occurs for me by running my script either through apache or  by invoking it on the command line.  Apache does not crash, but script exicution stops.  I only know how to program in PHP (not C, although I can "read" some C code and follow it), but I think if PHP ignored all of the annotation tags this might work?????

Thank you so very much for your volunteer efforts.  I really appreciate the work you and others do.  The PHP 5.0 SOAP client (and server) appear to be feature rich and will be really useful to a lot of people.  I'll be happy to assist in any way I can (additional information, tests, you name it.)  Just email me.  Thanks.

Reproduce code:
---------------
WDSL:
http://docs.tms.tribune.com/tech/tmsdatadirect/zap2it/xtvd.wsdl
Working perl script (for illustration purposes to verify that the WDSL appears to be correct):
http://docs.tms.tribune.com/tech/tmsdatadirect/zap2it/datadirect-parse.zip

my code:
<?PHP
$client = new   SoapClient('http://docs.tms.tribune.com/tech/tmsdatadirect/zap2it/xtvd.wsdl');

?>

Expected result:
----------------
Resource $client created to access the soap server

Actual result:
--------------
<br />
<b>Fatal error</b>:  Uncaught SoapFault exception: [WSDL] SOAP-ERROR: Parsing Schema: unexpected <annotation> in attributeGroup in /home/david/peevo/zap2it.php:4
Stack trace:
#0 {main}
  thrown in <b>/home/david/peevo/zap2it.php</b> on line <b>4</b><br />

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-01 17:12 UTC] edink@php.net
Dmitry, could you take a look at this report?
 [2004-04-02 01:15 UTC] dmitry@php.net
Thank you for your report.
The bug is fixed in PHP 5.0.0RC2-DEV CVS.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 01:00:02 2026 UTC