Fixed bug #27742 (WDSL SOAP Parsing Schema bug)